# utils

./: LICENSE  x.txt
archive_v02/: generate_cdr.py
archive_v03/test_v01/: Cargo.toml  macs.db
archive_v03/test_v01/src/: event_generator.rs  event_processor.rs  main.rs
archive_v03/test_v02/: .env  Cargo.toml
archive_v03/test_v02/src/: main.rs
archive_v03/test_v02/src/config/: mod.rs
archive_v03/test_v03/: Cargo.toml  README.md  database.sql
archive_v03/test_v03/src/: main.rs
archive_v03/test_v05/: Cargo.toml  database.sql
archive_v03/test_v05/src/: database.rs  error.rs  generator.rs  main.rs  processor.rs  queue.rs
work/: Cargo.toml  Cargo.toml_all  cdr_records.csv
work/MQ/INPUT/: syslog_20250126001752_01.parquet  syslog_20250126001754_02.parquet  syslog_20250126001755_03.parquet  syslog_20250126001757_04.parquet  syslog_20250126001759_05.parquet  syslog_20250126015604_02.parquet  syslog_20250126015606_03.parquet  syslog_20250126015608_04.parquet
work/delta/: Cargo.toml  close.parquet  open.parquet
work/delta/src/: main.rs
work/delta/tablee/: part-00001-fadc1863-997f-4602-afbc-271d78a382ed-c000.zstd.parquet
work/delta_v01/: Cargo.toml
work/delta_v01/src/: main.rs
work/minidl/RAW/: CLOSE20250128195707.parquet  CLOSE20250128195746.parquet  CLOSE20250128195806.parquet  OPEN20250128195726.parquet  OPEN20250128195746.parquet  OPEN20250128195806.parquet
work/polar/: Cargo.toml
work/polar/src/: main.rs
work/src/: config_loader.rs  file_reader.rs  file_reader_v01.rs  main.rs  myfs.rs  queue.rs  queue_v01.rs
work/src/generator/: syslog.rs
work/src/my_database/: db  snap.00000000000000E1
work/src/my_db/: db
work/src/syslog/: mod.rs  syslog_parser.rs
work/src/syslog_gen/: mod.rs  syslog.rs
work/test_v02/cache_db/: snap.00000000000001E2
work/test_v03/my_db/: db
work/test_v03/src/: main.rs
work/test_v04/: Cargo.toml
work/test_v04/my_cache/: db  snap.000000000000011E  snap.000000000008B2B2  snap.0000000000F5F9F2
work/test_v04/src/: main.rs
work/test_v05/src/: main.rs
work/test_v06/src/: main.rs
work/test_v07/: Cargo.toml  data.parquet
work/test_v07/src/: main.rs
work/test_v08/: Cargo.toml
work/test_v08/src/: main.rs
work/test_v09/: Cargo.toml  weather.csv
work/writer/: Cargo.toml
work/writer/DDDD/: part-00000-31c0adf5-b47c-4433-a7c2-436c19ed4d96-c000.snappy.parquet
work/writer/archive/: main.rs  main_v05.rs  main_v06.rs  main_v07.rs
work/writer/src/: main.rs
work_v02/test_v02/: Cargo.toml  data.parquet
work_v02/test_v02/src/: main.rs
(+105 files in other folders)
