[package]
name = "work"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
sled = "0.34"
serde_json = "1.0.85"
rayon = "1.5.3"
tokio = { version = "1", features = ["full"] }