[package]
name = "test_v07"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde_json = "1.0"
rand = "0.9.0"
datafusion = "45.0.0"
