[package]
name = "test_v03"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
config = "0.15.8"
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = "1.43.0"
