[package]
name = "test_v05"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
datafusion = "45.0.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
rand = "0.9.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sled = "0.34.7"
tokio = { version = "1.43.0", features = ["full"] }
