[package]
name = "test_v02"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
datafusion = "44.0.0"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.25"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
uuid = "1.12.1"
csv-async = { version = "1.3.0", features = ["tokio"] }
serde = { version = "1.0.217", features = ["derive"] }